Make filegdb4j runtime modules Java 8 compatible (public API unchanged, verified by baseline check)