@@ -1,5 +1,7 @@
 package ch.so.agi.filegdb.catalog;
 
+import java.util.Objects;
+
 /**
  * Spatial reference of a dataset as declared in its catalog definition XML.
  *
@@ -7,12 +9,35 @@ package ch.so.agi.filegdb.catalog;
  * @param latestWkid newer well known id from {@code LatestWKID}, null if absent
  * @param wkt WKT text from the {@code WKT} element, empty if absent
  */
-public record CrsDefinition(int wkid, Integer latestWkid, String wkt) {
+public final class CrsDefinition {
+  private final int wkid;
+  private final Integer latestWkid;
+  private final String wkt;
 
   public static final CrsDefinition UNKNOWN = new CrsDefinition(0, null, "");
 
+  public CrsDefinition(int wkid, Integer latestWkid, String wkt) {
+    this.wkid = wkid;
+    this.latestWkid = latestWkid;
+    this.wkt = wkt;
+  }
+
+  public int wkid() {
+    return wkid;
+  }
+
+  public Integer latestWkid() {
+    return latestWkid;
+  }
+
+  public String wkt() {
+    return wkt;
+  }
+
   public boolean isDefined() {
-    return wkid > 0 || (latestWkid != null && latestWkid > 0) || (wkt != null && !wkt.isBlank());
+    return wkid > 0
+        || (latestWkid != null && latestWkid > 0)
+        || (wkt != null && !wkt.trim().isEmpty());
   }
 
   /** Returns the most useful well known id, zero if none is present. */
@@ -21,5 +46,33 @@ public record CrsDefinition(int wkid, Integer latestWkid, String wkt) {
       return latestWkid;
     }
     return wkid;
+  }
+
+  @Override
+  public final boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    CrsDefinition other = (CrsDefinition) o;
+    return wkid == other.wkid
+        && Objects.equals(latestWkid, other.latestWkid)
+        && Objects.equals(wkt, other.wkt);
+  }
+
+  @Override
+  public final int hashCode() {
+    int result = 0;
+    result = 31 * result + Integer.hashCode(wkid);
+    result = 31 * result + Objects.hashCode(latestWkid);
+    result = 31 * result + Objects.hashCode(wkt);
+    return result;
+  }
+
+  @Override
+  public final String toString() {
+    return "CrsDefinition[wkid=" + wkid + ", latestWkid=" + latestWkid + ", wkt=" + wkt + "]";
   }
 }
